nixidy/generated/prod/chirpstack/HTTPRoute-chirpstack.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: chirpstack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: chirpstack
  name: chirpstack
  namespace: home
spec:
  hostnames:
    - chirpstack.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: chirpstack
          namespace: home
          port: 8080
          weight: 1
